@@ -1,18 +1,9 @@
-FROM eclipse-temurin:20-jdk as build
-WORKDIR /workspace/app
-
-COPY mvnw .
-COPY .mvn .mvn
-COPY pom.xml .
-COPY src src
-
-RUN ./mvnw install -DskipTests
-RUN mkdir -p target/dependency && (cd target/dependency; jar -xf ../*.jar)
-
 FROM eclipse-temurin:20-jdk
-VOLUME /tmp
-ARG DEPENDENCY=/workspace/app/target/dependency
-COPY --from=build ${DEPENDENCY}/BOOT-INF/lib /app/lib
-COPY --from=build ${DEPENDENCY}/META-INF /app/META-INF
-COPY --from=build ${DEPENDENCY}/BOOT-INF/classes /app
-ENTRYPOINT ["java","-cp","app:app/lib/*","hello.Application"]
+
+COPY target/api_gateway_reactive-1.0-SNAPSHOT-spring-boot.jar /app/app.jar
+
+EXPOSE 8080
+
+WORKDIR /app
+
+ENTRYPOINT ["java", "--enable-preview", "--add-modules", "jdk.incubator.concurrent", "-jar", "app.jar"]
